# Hybrid_Decentralized_Compute_Network

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_HANDBOOK_EN.md  PROJEKT_KEZIKONYV_HU.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ai-research-watch.yml  ci.yml  claude.yml  codex-review.yml  sim-dispatch.yml
config/ai/: research_sources.json
crates/proto/: AGENTS.md  Cargo.toml
crates/proto/src/: lib.rs
crates/settle-core/: AGENTS.md  Cargo.toml
crates/settle-core/src/: lib.rs
docs/adr/: 0000-adr-template.md  0001-multi-network-settlement.md  0002-four-track-decision-matrix.md  0003-internal-work-credit.md
docs/ai/: AI_MANAGER_ADAPTER_HANDOFF_2026_07_18.md  AI_MANAGER_DEVELOPMENT_PRODUCTION_SELF_UPGRADE_SPEC_2026_07_19.md  AI_MANAGER_HDCN_RECEIPT_BRIDGE_2026_07_22.md  AI_MANAGER_HYBRID_MASTER_DIRECTION_AND_CONSOLE_SPRINTS_2026_07_18.md  AI_MANAGER_SELF_IMPROVEMENT_IMPLEMENTATION_BACKLOG_2026_07_19.md  AI_RESEARCH_NEWS_WATCHER_2026_07_19.md  CONSOLE_HANDOFF_AUDIT_AND_PRODUCT_STRATEGY_2026_07_16.md  REPO_MAP.md
docs/modeling/: DIRECTION_MODELING_PLAN.md
docs/reference/: hermes_telegram_config.md
docs/research/: HDCN_FULL_AUDIT_HU_2026_07_16.md  HDCN_INNOVATION_PRODUCT_STRATEGY_HU_2026_07_16.md  cross_chain_p2p_feasibility_EN.md  gpu_compute_network_sui_render_libp2p.md  hybrid_decentralized_compute_network.md  protocol_compute_currency.md  seven_problems_solutions.md
docs/sprints/: SPRINT_00_BOOTSTRAP.md  (+1 more)
scripts/: __init__.py  run_simulations.sh
sim/: depin_network_model.py
tests/: test_ai_research_watch.py
(+13 files in other folders)
