[package]
name = "proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "hdcn_proto"
path = "src/lib.rs"

[dependencies]
blake3 = { version = "1.5", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.5"

[lints]
workspace = true
