[package]
name = "settle-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "hdcn_settle_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
